Restoring 00EB:4 Code.  sectins to the entry
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1507 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -497,6 +497,10 @@ CmdParms=OBC:8=0
 CmdTranslator=BandOtranslator(3)
 FixedData=01 C0 80 00
 DefaultCmd=00
+Code.S3C80=07 09 41 8B 15 00 00 6C 05 95 00 6C 0B AB 00 6C 11 C1 00 6C 17 D7 00 6C 1D EA B0 C4 F6 FF 78 F6 FF 78 1C 22 F6 01 4C B0 C3 68 03 58 05 F6 FF 60 58 06 F6 FF 5E 58 07 F6 FF 5E F6 FF 74 37 41 0E F6 FF 74 3C 0E 1C 20 F6 01 6D 3A F9 60 C4 08 07 56 C0 E0 B4 04 C0 EB 05 F6 01 0A 7B BF AF 6C 08 1C 16 90 C5 FB 08 1C 12 60 C3 EB 02 1C 1A F6 01 4C 6A ED AF 1C 1E 8B 02 1C 12 8D 01 4C
+Code.740=00 00 41 22 67 3C 00 58 3C 00 57 20 B5 01 20 B5 01 20 B5 01 A2 24 A0 11 22 44 22 1F A5 5F 85 55 20 84 01 A5 60 85 55 A5 61 85 56 3C 11 54 20 84 01 A2 14 A0 09 22 44 20 AA 01 07 58 06 A2 6D A0 EF 22 44 A5 61 29 E0 45 5E D0 04 22 06 90 B9 4C 6C FF 20 AA 01 06 56 26 55 90 12 A2 B9 A0 04 22 44 44 57 D0 0E A2 13 A0 09 22 44 80 06 A2 C4 A0 08 22 44 C6 54 D0 DB 60 22 5C A2 46 A0 01 22 44 4C 5F FF 20 AA 01 A2 C2 A0 04 22 44 60
+Code.6805-RC16/18=00 02 35 D5 05 35 E0 08 35 EB 0B 35 F6 0F 35 00 3F 53 AD 58 3F 52 5F B6 5A BF 54 B7 51 E6 5C B7 50 AE 03 0F 50 07 5F 33 52 26 02 AE 06 AD 3A 38 50 3A 51 26 EC A6 08 BE 54 5C A3 03 26 DB AD 27 0E 53 0D AD 22 11 14 A6 FB AE 60 CD 01 96 1E 53 B6 5E A4 E0 B8 5B 26 0E CD 01 89 25 04 1C 53 20 B1 0D 53 02 AD 06 81 AE 09 CC 01 CA 5F AD FA AD F8 AE 0C AD F4 81
+Code.HCS08=20 18 04 05 41 00 00 6B 05 A9 00 6B 0B BF 00 6B 11 D5 00 6B 17 EB 00 6B 1D FE 3F 56 AD 59 AD 57 AE 7A CD FF 65 3F 53 4E 60 54 4E 62 55 AD 2F 4E 63 55 AD 27 4E 64 55 AD 22 AD 38 00 56 0F AD 33 6E 0E 53 AE 78 CD FF 83 3B 53 F8 33 56 B6 64 A4 E0 B8 61 26 05 CD FF 92 25 C2 81 6E 08 54 AE 6E 39 55 24 08 AE 6A 33 53 26 02 AE 72 CD FF 65 3B 54 EC 81 AE 76 20 02 AE 6A CC FF 65
 Notes=See http://www.hifi-remote.com/forums/viewtopic.php?t=12486 for help in assigning OBCs.  B&O uses 9 or 12 device bits, described here as either 1 or 4 bits of Device  Hi, and 8 bits of Device Lo.  \n\
 The OBC will be repeated if the Repeat Mask exactly matches the 3 most significant bits of the OBC. \n\
 This executor doesn't handle IR signals for which a single frame of OBC is sent and repeats are a second OBC (Denoted D and H in the above link). \n\ 
